# accident_reconstruction

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  README.md  pyproject.toml
.claude/: launch.json
.github/workflows/: ci.yml
accident_reconstruction/: __init__.py  auto_reconstruct.py  birdseye_manual_annotation.py  calibrate_homography.py  manual_pre_impact_motorcycle_annotation.py  prompt_track_accident.py  recognized_route.py  run_pipeline.py  scene_config.py  scene_records.py  web_app.html  web_app.py
docs/: ACCIDENT_2D_RECONSTRUCTION.md  DATA.md  PROJECT_SUMMARY.md  README.md
scene_records/: keelung_xinwu_yier.json  pre_impact_motorcycle.json  taoyuan_yangmei.json  yilan_wujie.json
tests/: test_scene_records.py  test_smoke.py
